# caldav2google

./: .gitignore  .gitlab-ci.yaml  .pre-commit-config.yaml  README.md  env.example  pyproject.toml  sync_caldav_to_google.py
.gitea/workflows/: ci.yml
src/: auth_google.py  caldav_client.py  logger.py  main.py  sync_logic.py
tests/: conftest.py  test_auth_google.py  test_caldav_client.py  test_main.py  test_sync_logic.py
